sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:11: error: '(' expected but identifier found.
    else {if c == BLANC} {echange(Blanc,Bleu);Blanc -=1}
             ^DutchFlagAlgo:11: error: illegal start of simple expression
    else {if c == BLANC} {echange(Blanc,Bleu);Blanc -=1}
                       ^DutchFlagAlgo:11: error: ';' expected but '{' found.
    else {if c == BLANC} {echange(Blanc,Bleu);Blanc -=1}
                         ^